# todolist

./:  .env  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-server.yaml  docker-compose-v1.yaml  docker-compose.yaml  pyproject.toml  run.sh  start_p.sh
.github/workflows/: action.yaml
bot/: models.py  serializers.py  urls.py  views.py
bot/management/commands/: models.py  runbot.py
bot/migrations/: 0001_initial.py  0002_alter_tguser_chat_id.py  0003_tguser_verification_code.py
bot/tg/: client.py  dc.py
core/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
goals/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_board_goalcategory_board_boardparticipant.py  0003_auto_20220707_1736.py  0004_alter_goalcategory_board.py  0005_alter_goal_category.py
goals/views/: boards.py  category.py  comment.py  goals.py
tests/: conftest.py  factory.py  fixtures.py  test_user.py  tests.py
todolist/: middleware.py  settings.py  urls.py
