[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["dfvasia <vasilii-zhuravsk@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
