[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["dfvasia <vasilii-zhuravsk@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"
django-phonenumber-field = "^6.1.0"
phonenumbers = "^8.12.50"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"
drf-spectacular = "^0.22.1"
mypy = "^0.961"
django-stubs = "^1.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
